--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/DevRyuJin/Level/LV_Test.LV_Test
 EditorStartupMap=/Game/DevRyuJin/Level/LV_Test.LV_Test
+GlobalDefaultGameMode=/Game/DevRyuJin/Level/PublicGameMode.PublicGameMode_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
